modified hero section and README.md

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -28,7 +28,8 @@
     </header>
     <!--Changed div to "header"-->
 
-    <img class="hero" alt="group of people working on a project"></img>
+    <section class="hero" alt="group of people working on a project"></section>
+    <!--Changed div to section-->
     
     <section class="content">
         <article id="search-engine-optimization" class="search-engine-optimization">
