--- a/index.html
+++ b/index.html
@@ -63,25 +63,25 @@
 
 
     <aside class="benefits">
-        <article class="benefit-lead">
+        <article id="benefittext">
             <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" alt="icon with half of a gear, funnel with down-faced arrow, and money sign in a coin"/>
+            <img src="./assets/images/lead-generation.png" id="benefitimg"alt="icon with half of a gear, funnel with down-faced arrow, and money sign in a coin"/>
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </article>
 
-        <article class="benefit-brand">
+        <article id="benefittext">
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" alt="icon with lightbulb above a suit and tie" />
+            <img src="./assets/images/brand-awareness.png" id="benefitimg" alt="icon with lightbulb above a suit and tie" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </article>
 
-        <article class="benefit-cost">
+        <article id="benefittext">
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png" alt="icon with a gear surrounds by three circles with money signs"/>
+            <img src="./assets/images/cost-management.png" id="benefitimg" alt="icon with a gear surrounds by three circles with money signs"/>
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
