--- a/index.html
+++ b/index.html
@@ -32,8 +32,10 @@
     <!--Changed div to section-->
     
     <section class="content">
-        <article id="search-engine-optimization" class="search-engine-optimization">
+    <!--Changed div to "section"-->
+        <article id="search-engine-optimization" >
             <!--Added 'id="search-engine-optimization"' to article tag to link nav to this article -->
+            <!--Removed class="search-engine-optimization"-->
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="open notebook with the acronym 'SEO' on it"/>
             <h2>Search Engine Optimization</h2>
             <p>
@@ -41,7 +43,8 @@
             </p>
         </article>
 
-        <article id="online-reputation-management" class="online-reputation-management">
+        <article id="online-reputation-management">
+        <!--Removed class="online-reputation-management"-->
             <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="laptop with the word 'Reputation' on it"/>
             <h2>Online Reputation Management</h2>
             <p>
@@ -49,7 +52,8 @@
             </p>
         </article>
 
-        <article id="social-media-marketing" class="social-media-marketing">
+        <article id="social-media-marketing">
+        <!--Removed class="social-media-marketing"-->
             <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="multiple stickers on a table around a laptop"/>
             <h2>Social Media Marketing</h2>
             <p>
@@ -57,39 +61,40 @@
             </p>
         <!--Added alt tags to describe the image being used-->
         </article>
-        <!--Changed inner section "div" to "article"-->
+        <!--Changed inner section "div" to "article", removed each relative class tag from article tag-->
     </section>
-    <!--Changed div to "section"-->
+    
 
 
     <aside class="benefits">
-        <article id="benefittext">
+    <!--Changed "div" to "aside"-->
+        <article>
+        <!--Changed "div" to "article"-->
             <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" id="benefitimg"alt="icon with half of a gear, funnel with down-faced arrow, and money sign in a coin"/>
+            <img src="./assets/images/lead-generation.png" alt="icon with half of a gear, funnel with down-faced arrow, and money sign in a coin"/>
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </article>
 
-        <article id="benefittext">
+        <article>
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" id="benefitimg" alt="icon with lightbulb above a suit and tie" />
+            <img src="./assets/images/brand-awareness.png" alt="icon with lightbulb above a suit and tie" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </article>
 
-        <article id="benefittext">
+        <article>
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png" id="benefitimg" alt="icon with a gear surrounds by three circles with money signs"/>
+            <img src="./assets/images/cost-management.png" alt="icon with a gear surrounds by three circles with money signs"/>
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
         </article>
-        <!--Changed "div" to "article"-->
         <!--Added descriptive alt tags to imgs-->
     </aside>
-    <!--Changed "div" to "aside"-->
+
 
     <footer class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
